--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -1,7 +1,12 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    height: 5000px;
-    background-color: rgb(9, 9, 49);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(255, 255, 255);
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 /*TOPO*/
@@ -9,10 +14,10 @@ body {
 header {
     width: 100%;
     height: 100px;
-    background-color: rgba(0, 0, 0, 0.616);
-    position: sticky;
+    background-color: rgba(0, 0, 0, 0.70);
+    position: fixed;
     top: 0px;
-    z-index: 1;
+    z-index: 100;
     align-content: center;
     display: flex;
     align-items: center;
@@ -46,6 +51,7 @@ header {
 }
 
 .menu li a{
+    font-size: 18px;
     color: rgb(255, 255, 255);
     text-decoration: none;
 }
@@ -54,5 +60,156 @@ header {
     color: rgb(0, 119, 255);
     cursor: pointer;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 17px;
+}
+
+/*PAGE 1*/
+
+#page1 {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    padding: 100px;
+}
+
+#texto {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+#texto h1 {
+    text-align: center;
+    font-size: 35px;
+    color: rgb(255, 255, 255);
+    width: 500px;
+    margin-bottom: 20px;
+    line-height: 1.2;
+}
+
+#texto button{
+    margin-top: 10px;
+    width: 300px;
+    height: 80px;
+    background-color: rgb(0, 119, 255);
+    color: rgb(224, 224, 224);
+    font-size: 20px;
+    border-radius: 25px;
+    border-style: none;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+#texto button:hover{
+    background-color: black;
+    color: rgb(0, 119, 255);
+    font-weight: bold;
+}
+
+#video-page1 {
+    width: 390px;
+    z-index: -1;
+    position: absolute;
+
+}
+
+#video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Faz o vídeo ocupar toda a tela */
+#background-page1 {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover; /* Garante que o vídeo cubra toda a tela */
+    z-index: -1; /* Coloca o vídeo atrás do conteúdo */
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 1.0);
+}
+
+
+/*PAGE 2*/
+
+#page2 {
+    width: 100%;
+    margin-top: 100px;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
+}
+
+#page2 article {
+    width: 250px;
+    height: 350px;
+    background-color: rgb(0, 6, 83);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+#page2 article h1{
+    color: rgb(0, 119, 255);
+    margin-bottom: 20px;
+    font-size: 35px;
+}
+
+#page2 article h3{
+    margin-top: 10px;
+    color: rgb(224, 224, 224);
+    font-size: 24px;
+}
+
+#page2 article p{
+    color: rgb(224, 224, 224);
+    margin-bottom: 5px;
+    font-size: 18px;
+    padding: 8px;
+}
+
+#page2 article button{
+    background-color: rgb(0, 119, 255);
+    color: rgb(224, 224, 224);
+    border-radius: 20px;
+    width: 170px;
+    height: 50px;
+    border-style: none;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#page2 article button:hover{
+    background-color:rgb(0, 0, 0);
+    color: rgb(0, 119, 255);
+    font-weight: bold;
+}
+
+/*PAGE3*/
+
+#page3 {
+    width: 100vw;
+    height: auto;
+    background-color: rgb(54, 117, 173);
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#background-page3 {
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover; /* Mantém o vídeo dentro da seção sem distorção */
+    z-index: -1;
+    box-shadow: 5px 0px 30px rgba(0, 0, 0, 1.0);
 }
