--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -1,5 +1,5 @@
 html {
-    scroll-behavior: smooth;
+    scroll-behavior:smooth;
 }
 
 body {
@@ -65,14 +65,16 @@ header {
 
 /*PAGE 1*/
 
-#page1 {
+#home {
+    width: 100%;
+    height: auto;
     display: flex;
     justify-content: space-around;
     flex-direction: row;
-    padding: 100px;
 }
 
 #texto {
+    margin-top: 180px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -115,6 +117,7 @@ header {
 }
 
 #video {
+    margin-top: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -133,7 +136,7 @@ header {
 
 /*PAGE 2*/
 
-#page2 {
+#planos {
     width: 100%;
     margin-top: 100px;
     height: 100vh;
@@ -143,7 +146,7 @@ header {
     align-items: center;
 }
 
-#page2 article {
+#planos article {
     width: 250px;
     height: 350px;
     background-color: rgb(0, 6, 83);
@@ -154,26 +157,26 @@ header {
     align-items: center;
 }
 
-#page2 article h1{
+#planos article h1{
     color: rgb(0, 119, 255);
     margin-bottom: 20px;
     font-size: 35px;
 }
 
-#page2 article h3{
+#planos article h3{
     margin-top: 10px;
     color: rgb(224, 224, 224);
     font-size: 24px;
 }
 
-#page2 article p{
+#planos article p{
     color: rgb(224, 224, 224);
     margin-bottom: 5px;
     font-size: 18px;
     padding: 8px;
 }
 
-#page2 article button{
+#planos article button{
     background-color: rgb(0, 119, 255);
     color: rgb(224, 224, 224);
     border-radius: 20px;
@@ -185,7 +188,7 @@ header {
     font-weight: bold;
 }
 
-#page2 article button:hover{
+#planos article button:hover{
     background-color:rgb(0, 0, 0);
     color: rgb(0, 119, 255);
     font-weight: bold;
@@ -193,10 +196,9 @@ header {
 
 /*PAGE3*/
 
-#page3 {
+#cobertura {
     width: 100vw;
-    height: auto;
-    background-color: rgb(54, 117, 173);
+    height: 100vh;
     position: relative;
     display: flex;
     align-items: center;
@@ -212,4 +214,64 @@ header {
     object-fit: cover; /* Mantém o vídeo dentro da seção sem distorção */
     z-index: -1;
     box-shadow: 5px 0px 30px rgba(0, 0, 0, 1.0);
+}
+
+/* CONTATO */
+
+#contato {
+    width: 100vw;
+    height: 100vh;
+
+}
+
+#contato h1 {
+    margin-bottom: 30px;
+    font-size: 60px;
+    color: rgb(0, 6, 83);
+    padding-top: 120px;
+    text-align: center;
+}
+
+#caixas {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.caixa {
+    width: 500px;
+    height: 350px;
+    border-radius: 20px;
+    background-color: rgb(0, 6, 83);
+    text-align: center;
+}
+
+#caixas h2 {
+    margin-top: 35px;
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+}
+
+#caixas p {
+    font-size: 24px;
+    color: rgb(255, 255, 255);
+}
+
+#c2 button {
+    background-color: rgb(0, 119, 255);
+    border-style: none;
+    border-radius: 20px;
+    width: 180px;
+    height: 50px;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 80px;
+}
+
+#c2 button:hover{
+    background-color: rgb(0, 0, 0);
+    color: rgb(0, 119, 255);
+    cursor: pointer;
 }
