--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body {
   overflow-x: hidden;
 }
 
-/* Classes para o fundo animado */
 .animated-gradient-light {
   @apply bg-gradient-to-r from-light-bg via-gray-200 to-light-bg;
   background-size: 200% 200%;
@@ -22,4 +21,44 @@ body {
   @apply bg-gradient-to-r from-dark-bg via-gray-900 to-dark-bg;
   background-size: 200% 200%;
   animation: gradient-bg 10s ease infinite;
+}
+
+/* === ESTILOS DA BARRA DE SCROLL === */
+
+/* Para o corpo da barra de scroll */
+::-webkit-scrollbar {
+  width: 6px; /* Largura da barra */
+}
+
+/* Para o fundo da barra de scroll (a calha) */
+::-webkit-scrollbar-track {
+  @apply bg-light-bg/50 dark:bg-dark-bg/95; /* Cor de fundo com transparência */
+}
+
+/* Para o manipula-dor da barra de scroll (a parte que se move) */
+::-webkit-scrollbar-thumb {
+  @apply bg-gray-400 dark:bg-zinc-800; /* Cor do manipula-dor */
+  border-radius: 10px; /* Bordas arredondadas */
+}
+
+/* Efeito ao passar o rato por cima do manipula-dor */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-gray-400 dark:bg-zinc-900;
+}
+
+/* === ESTILOS PARA O JOGO DA MEMÓRIA (EFEITO 3D) === */
+.perspective-1000 {
+  perspective: 1000px;
+}
+
+.preserve-3d {
+  transform-style: preserve-3d;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
 }
